--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
         <button id="btnToggleDetails" class="btn btn-secondary btn-sm">
           <i></i>Hide/Show Details
         </button>
+        <div id="pendingTasks">
+          <!-- create task her from JS -->
+        </div>
       </section>
 
       <section id="secForm">
